DockerのTime zoneをJSTに設定.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
             - 3000:3000
         depends_on:
             - db
+        environment:
+            - "TZ=Japan"
 
 volumes:
   gem_data:
